fix: simplify overflow fix

--- a/packages/uikit-workshop/src/sass/pattern-lab.scss
+++ b/packages/uikit-workshop/src/sass/pattern-lab.scss
@@ -59,17 +59,8 @@
 .pl-c-code-copy-btn {
   display: inline-block;
   position: absolute;
-  top: 0.5rem;
+  top: 0.4rem;
   right: 0.5rem;
-
-  @supports (position: sticky){
-    transform: translateY(-0.7rem);
-    float: right;
-    top: 3.2rem;
-    right: 0;
-    margin-top: -2rem;
-  }
-
   padding: 0.2rem 0.4rem;
   background-color: $pl-color-gray-07;
   color: $pl-color-gray-87;
