--- a/packages/uikit-workshop/src/sass/scss/04-components/_tabs.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_tabs.scss
@@ -92,8 +92,7 @@
   display: flex;
   flex-basis: auto;
   -webkit-overflow-scrolling: touch;
-  height: 100%;
-  overflow: auto; // workaround to firefox background gradient overflow bug
+  overflow-y: auto; // workaround to firefox background gradient overflow bug
 
   /**
      *  Tab content inside modal
